# rust-server-lab

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/rust/: dockerFile
src/: client.rs  main.rs  server.rs
src/client/: mod.rs  raw_client.rs  reqwest_client.rs
