[package]
name = "rust-server-lab"
version = "0.1.0"
edition = "2021"

# 学習用プロジェクト
# - シンプルなHTTPサーバの実装練習
# - 非同期HTTPクライアント（例: Claudeのステータス取得）の練習

[dependencies]
# 非同期ランタイム。tokio::main マクロや TcpListener などを利用する想定
tokio = { version = "1", features = ["full"] }

# 非同期HTTPクライアント。Claudeのステータスページなどへのリクエストに利用予定
reqwest = { version = "0.12", features = ["json"] }

# JSONレスポンスのデシリアライズ用（必要に応じて）
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# エラーハンドリングを楽にするため（任意）
anyhow = "1"
